--- a/Exercises/W1_S1.ipynb
+++ b/Exercises/W1_S1.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/tbeucler/2022_Intro_Python/blob/main/Exercises/W1_S1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Wenyue24/2022_Intro_Python/blob/main/Exercises/W1_S1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -52,18 +52,34 @@
         "\n",
         "# Hint: Use list indexing as a criteria (size of your list)\n",
         "indx = 0\n",
-        "while ____<len(______________):\n",
-        "  if ____________[____]<6:\n",
-        "    ____\n",
+        "while indx < len(PlayListRating):\n",
+        "  if PlayListRating[indx]<6:\n",
+        "     break\n",
         "  else:\n",
-        "    print(_________[____])\n",
-        "  ____+=1"
+        "    print(f'the values of the ratings of an album playlist is {PlayListRating[indx]}')\n",
+        "    indx+=1"
       ],
       "metadata": {
-        "id": "UnkVUYJGuS0o"
+        "id": "UnkVUYJGuS0o",
+        "outputId": "629ff483-b9a7-41a5-bed1-359ee98874c2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "the values of the ratings of an album playlist is 10\n",
+            "the values of the ratings of an album playlist is 9.5\n",
+            "the values of the ratings of an album playlist is 10\n",
+            "the values of the ratings of an album playlist is 8\n",
+            "the values of the ratings of an album playlist is 7.5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -77,17 +93,33 @@
     {
       "cell_type": "code",
       "source": [
-        "for ____ in range(len(______________)):\n",
-        "  if _____________[____]<6:\n",
-        "    ____\n",
+        "for indx in range(len(PlayListRating)):\n",
+        "  if PlayListRating[indx]<6:\n",
+        "     break\n",
         "  else:\n",
-        "    print(_____________[____])"
+        "    print(f'the values of the ratings of an album playlist is {PlayListRating[indx]}')"
       ],
       "metadata": {
-        "id": "KYktPlnXvyaZ"
+        "id": "KYktPlnXvyaZ",
+        "outputId": "6a26028d-a8be-49c4-d4d1-994629f93ff1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "the values of the ratings of an album playlist is 10\n",
+            "the values of the ratings of an album playlist is 9.5\n",
+            "the values of the ratings of an album playlist is 10\n",
+            "the values of the ratings of an album playlist is 8\n",
+            "the values of the ratings of an album playlist is 7.5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -101,17 +133,29 @@
     {
       "cell_type": "code",
       "source": [
-        "squares = []\n",
-        "for ___,___ in enumerate([_____________________]):\n",
-        "  squares.____(___)\n",
+        "squares = [] # An empty list\n",
+        "for indx,color in enumerate(['red', 'yellow', 'green', 'purple', 'blue']):\n",
+        "    squares.append(color) # Here you add (append) the elements one by one to the empty list\n",
         "\n",
         "print(squares)"
       ],
       "metadata": {
-        "id": "dH7uOieswQ_t"
+        "id": "dH7uOieswQ_t",
+        "outputId": "8f00b8ed-9612-485f-b2f2-637f1bf06ee6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['red', 'yellow', 'green', 'purple', 'blue']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -133,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "xreaix9UpPl9"
       },
@@ -213,26 +257,57 @@
       "source": [
         "import math\n",
         "# Hints: Please don't remove the \\n that your TA carefully put in the code!\n",
-        "with open(________, '_', encoding=\"utf-8\") as fhandler:\n",
-        "  fhandler.write('______________________\\n')\n",
+        "with open('ans.txt', 'w', encoding=\"utf-8\") as fhandler:\n",
+        "  fhandler.write('This is my 1st I/O file excercise\\n')\n",
+        "#fhandler.close()\n",
         "\n",
-        "with open(________, '__', encoding=\"utf-8\") as fhandler:\n",
+        "with open('ans.txt', 'r+', encoding=\"utf-8\") as fhandler:\n",
         "  print(fhandler.readlines())\n",
         "  # Your TA would like accuracy to the fourth decimal here.\n",
-        "  firstline = f'____________________________ {math.pi:._f}\\n'\n",
-        "  secondline = '_____________________________\\n'\n",
-        "  thirdline = '___________________________\\n'\n",
-        "  fhandler.writelines([___,____,___])\n",
+        "  firstline = f'I just remembered that pi is approximately {math.pi:.4f}\\n'\n",
+        "  secondline = 'Writing this to this file\\n'\n",
+        "  thirdline = 'is a piece of cake!\\n'\n",
+        "  fhandler.writelines([firstline,secondline,thirdline])\n",
         "  # Go to the beginning of file\n",
         "  fhandler.seek(0)\n",
         "  # Print the content of file\n",
         "  print(fhandler.readlines()) "
       ],
       "metadata": {
-        "id": "5rdfnOhSyGK3"
+        "id": "5rdfnOhSyGK3",
+        "outputId": "cd39e7f8-1fa6-4172-ac26-844bf85d5f3b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['This is my 1st I/O file excercise\\n']\n",
+            "['This is my 1st I/O file excercise\\n', 'I just remembered that pi is approximately 3.1416\\n', 'Writing this to this file\\n', 'is a piece of cake!\\n']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Exercise 1 (Text File)\n",
+        "Let's use what we have just learned to write a slightly more complex file.\n",
+        "1.   Create a file called \"ans.txt\"\n",
+        "2.   Write the following sentence \"This is my first I/O exercise.\"\n",
+        "3.   Save the file\n",
+        "4.   Read the file again, add 3 more new sentences: \"I just remembered that pi is approximately 3.1416\", \"Writing this to this file \", \"is a piece of cake!\"\n",
+        "\n",
+        "It is impossible to remember the exact value of pi, but we may want to change the accuracy of the pi we print at will. So let's import [math](https://docs.python.org/3/library/math.html) to get the exact pi value to output pi with the desired accuracy. \n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "wvMFJNNeM_WR"
+      }
     },
     {
       "cell_type": "markdown",
